Adding completed flashingTitle function along with changes I made to the html and css files up to this point

--- a/Full Stack Course Assignments/Simon Game Project/index.html
+++ b/Full Stack Course Assignments/Simon Game Project/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Press A Key to Start <span>Anotha one</span></h1> 
+        <!-- <h1 id="level-title">Press A Key to Start <span>Anotha one</span></h1>  -->
+        <h1 id="level-title">Press A Key to Start</h1>
+        <h2 id="highscore">Highscore: Deez nutz</h2>
         <div class="grid-container">
             <div class="btn green"></div>
             <div class="btn red"></div>
