Created all the helper functions needed to execute this program, just need to clean up and arrange the logic to make the game work

--- a/Full Stack Course Assignments/Simon Game Project/index.html
+++ b/Full Stack Course Assignments/Simon Game Project/index.html
@@ -12,14 +12,13 @@
 </head>
 <body>
     <div class="container">
-        <!-- <h1 id="level-title">Press A Key to Start <span>Anotha one</span></h1>  -->
         <h1 id="level-title">Press A Key to Start</h1>
         <h2 id="highscore">Highscore: Deez nutz</h2>
         <div class="grid-container">
-            <div class="btn green"></div>
-            <div class="btn red"></div>
-            <div class="btn yellow"></div>
-            <div class="btn blue"></div>
+            <div class="btn" id="green"></div>
+            <div class="btn" id="red"></div>
+            <div class="btn" id="yellow"></div>
+            <div class="btn" id="blue"></div>
         </div>
 
     </div>
