Completed project, handled edge cases that I caught at the time and wrote down ideas to make more efficient in future

--- a/Full Stack Course Assignments/Simon Game Project/index.html
+++ b/Full Stack Course Assignments/Simon Game Project/index.html
@@ -8,12 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Simon Game</title>
 </head>
 <body>
     <div class="container">
         <h1 id="level-title">Press A Key to Start</h1>
-        <h2 id="highscore">Highscore: Deez nutz</h2>
         <div class="grid-container">
             <div class="btn" id="green"></div>
             <div class="btn" id="red"></div>
